# KalaExtract

./: CMakeLists.txt  LICENSE.md  README.md
_external_shared/7zip/: README.md
docs/: external_libraries.md  spec_1_0.md
include/: core.hpp  data.hpp
include/core/: command.hpp  core.hpp
src/: command.cpp  core.cpp  data.cpp  main.cpp
src/core/: command.cpp  core.cpp
